profile poc updated design

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 8090
-
+#spring.profiles.active=@activatedProperties@
 #Hibernate
 #spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.DefaultNamingStrategy
 #spring.jpa.hibernate.ddl-auto=validate
@@ -8,6 +8,10 @@ server.port = 8090
 #spring.datasource.schema=classpath:/data/hsqldb/schema.sql
 #spring.datasource.data=classpath:/data/hsqldb/data.sql
 
-database.url=hello.com
-database.userid=dbuser
-database.password=Password
+database.deploy.url=${database.url}
+database.deploy.userid=${database.userid}
+database.deploy.password=${database.password}
+
+#database.deploy.url=1
+#database.deploy.userid=2
+#database.deploy.password=3
